--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "gendiff": "bin/gendiff.js"
   },
   "dependencies": {
-    "commander": "^12.1.0"
+    "commander": "^12.1.0",
+    "js-yaml": "^4.1.0"
   },
   "devDependencies": {
     "@eslint/create-config": "^1.0.0",
