--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
       
       - run: make lint
       
-      - run: make test
+      - run: npm run test
       
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v5
