fix Makefile, fix build.yml, fix package.json

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,9 @@ jobs:
 
       - run: make install
       - run: make lint
-      - run: make test
+
+      - name: Run tests with coverage
+        run: make test
 
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v5
