--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=fSabel_frontend-project-46
 sonar.organization=fsabel
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
 
 # This is the name and version displayed in the SonarCloud UI.
