--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,6 @@
   "useTabs": false,
   "singleQuote": true,
   "trailingComma": "all",
-  "semi": false
+  "semi": false,
+  "quoteProps": "consistent"
 }
